K1J-551: Updated test package structure to mimic implementation and some cleanup for sonarqube