@@ -16,7 +16,7 @@
  * You should have received a copy of the GNU General Public License
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
-package se.inera.intyg.webcert.integration.servicenow.service;
+package se.inera.intyg.webcert.integration.servicenow.v1.service;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -35,9 +35,11 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import se.inera.intyg.webcert.integration.servicenow.client.SubscriptionRestClient;
 import se.inera.intyg.webcert.integration.servicenow.dto.Organization;
 import se.inera.intyg.webcert.integration.servicenow.dto.OrganizationResponse;
+import se.inera.intyg.webcert.integration.servicenow.service.CheckSubscriptionService;
+import se.inera.intyg.webcert.integration.servicenow.service.GetCareProvidersMissingSubscriptionService;
+import se.inera.intyg.webcert.integration.servicenow.v1.client.SubscriptionRestClient;
 
 @ExtendWith(MockitoExtension.class)
 class ServiceNowSubscriptionIntegrationServiceTest {
@@ -93,7 +95,7 @@ class ServiceNowSubscriptionIntegrationServiceTest {
                 Set.of(ORG_NUMBER)
             );
             doReturn(true).when(checkSubscriptionService).isMissing(
-                organizationResponse.getResult().get(0).getServiceCodes(), ELEG);
+                organizationResponse.getResult().getFirst().getServiceCodes(), ELEG);
 
             assertTrue(subscriptionRestService.isMissingSubscriptionUnregisteredElegUser(ORG_NUMBER));
         }
@@ -104,7 +106,7 @@ class ServiceNowSubscriptionIntegrationServiceTest {
                 Set.of(ORG_NUMBER)
             );
             doReturn(false).when(checkSubscriptionService).isMissing(
-                organizationResponse.getResult().get(0).getServiceCodes(), ELEG);
+                organizationResponse.getResult().getFirst().getServiceCodes(), ELEG);
 
             assertFalse(subscriptionRestService.isMissingSubscriptionUnregisteredElegUser(ORG_NUMBER));
         }
